# This toml file is called a Virtual Manifest because
# it defines a workspace rather than a package.

[workspace]
resolver = "2"

members = [
    "ast",
    "bytecode",
    "cli",
    "compiler",
    "frontend/parser",
    "frontend/semantic-analyzer",
    "runtime/vm",
    "shared",
]

[workspace.dependencies]
regex = "1.12.3"
colored = "3.1.1"
serial_test = "3.4.0"
rayon = "1.12.0"
