# This toml file is called a Virtual Manifest because
# it defines a workspace rather than a package.

[workspace]
resolver = "2"

members = [
    "binder",
    "bytecode",
    "cli",
    "compiler",
    "frontend/ast",
    "frontend/csv",
    "frontend/parser",
    "frontend/semantic-analyzer",
    "runtime/vm",
    "shared/errors",
    "shared/builtins",
]

[workspace.dependencies]
regex = "1.12.3"
colored = "3.1.1"
serial_test = "3.4.0"
rayon = "1.12.0"
csv = "1.4.0"
