[package]
name = "elise"
version = "0.1.0"
edition = "2024"

[[bin]]
# name = name of the compiled executable.
# The output binary will be: target/debug/elise
name = "elise"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
elise-sc-parser = { path = "../frontend/sc-parser" }
elise-d-parser = { path = "../frontend/d-parser" }
elise-shared = { path = "../shared" }
colored.workspace = true
serial_test.workspace = true
rayon.workspace = true
