[package]
name = "elise"
version = "0.1.0"
edition = "2024"

[[bin]]
# name = name of the compiled executable.
# The output binary will be: target/debug/elise
name = "elise"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
elise-binder = { path = "../binder" }
elise-parser = { path = "../frontend/parser" }
elise-csv = { path = "../frontend/csv" }
elise-errors = { path = "../shared/errors" }
elise-types = { path = "../shared/types" }
colored.workspace = true
serial_test.workspace = true
rayon.workspace = true
