[package]
name = "elise"
version = "0.1.0"
edition = "2024"

[[bin]]
# name = name of the compiled executable.
# The output binary will be: target/debug/elise
name = "elise"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
elise-binder = { path = "../frontend/binder" }
elise-parser = { path = "../frontend/parser" }
elise-semanalyzer = { path = "../frontend/semanalyzer" }
elise-csv = { path = "../frontend/csv" }
elise-shared-errors = { path = "../shared/shared_errors" }
elise-shared-types = { path = "../shared/shared_types" }
colored.workspace = true
serial_test.workspace = true
rayon.workspace = true
