[package]
name = "elise-csv"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
csv.workspace = true
elise-errors = { path = "../../shared/errors" }
elise-builtins = { path = "../../shared/builtins" }
elise-types = { path = "../../shared/types" }
elise-ast = { path = "../ast" }
