[package]
name = "elise-csv"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
csv.workspace = true
elise-shared-errors = { path = "../../shared/shared_errors" }
elise-shared-types = { path = "../../shared/shared_types" }
elise-ast = { path = "../ast" }
elise-binder = { path = "../binder" }
